--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,12 @@ name: Publish Release
 on:
   push:
     tags:
-      - "v*" # 当推送以 "v" 开头的标签时触发（如 v1.0.0, v2.1.0）
+      - "v*"
+
+permissions:
+  contents: write
+  packages: write
+  pull-requests: write
 
 jobs:
   update-release-draft:
@@ -12,20 +17,17 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # Step 1: 检出代码库
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      # Step 2: 自动生成 Release Notes
       - name: Generate release notes
         id: changelog
         uses: mikepenz/release-changelog-builder-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 3: 自动生成 Release
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -38,18 +40,47 @@ jobs:
           draft: false
           prerelease: false
 
-      # Step 4: 可选，构建zip文件
       - name: Create ZIP file
         run: |
-          zip -r gemini-balance.zip . -x "*.git*" "*.github*" "*.env*" "logs/*" "tests/*"
+          zip -r gemini-balance.zip . \
+            -x "*.git*" "*.github*" "*.env*" "logs/*" "tests/*"
 
-      # Step 5: 可选，上传构建文件
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./gemini-balance.zip # 替换为你的构建文件路径
-          asset_name: gemini-balance.zip # 替换为你的文件名
+          asset_path: ./gemini-balance.zip
+          asset_name: gemini-balance.zip
           asset_content_type: application/zip
+
+  build-and-push-image:
+    name: Build & Push Docker Image
+    needs: update-release-draft
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.repository }}
+          TAG=${{ github.ref_name }}
+          docker build -t $IMAGE_NAME:$TAG .
+          docker tag $IMAGE_NAME:$TAG $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$TAG
+          docker push $IMAGE_NAME:latest
