--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,13 +1,14 @@
-name: Docker Image CI 
+name: Docker Image CI
 
 on:
   push:
+    branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -16,7 +17,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # 这个权限用于标记容器镜像
       id-token: write
 
     steps:
@@ -26,7 +26,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 登录到 GitHub Container Registry
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -41,17 +40,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            # https://github.com/docker/metadata-action/tree/v5/?tab=readme-ov-file#semver
-            # Event: push,     Ref: refs/head/main,       Tags: main
-            # Event: push tag, Ref: refs/tags/v1.2.3,     Tags: 1.2.3, 1.2, 1, latest
-            # Event: push tag, Ref: refs/tags/v2.0.8-rc1, Tags: 2.0.8-rc1
             type=ref,event=branch
+            type=ref,event=branch,format=latest
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-          labels: |
-            org.opencontainers.image.description=OpenAI API Compatible Server
-            org.opencontainers.image.source=${{ github.event.repository.html_url }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
